; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_sco.c_bta_ag_sco_conn_open.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_sco.c_bta_ag_sco_conn_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i32, i32, i32 }

@BTA_AG_SCO_CONN_OPEN_E = common dso_local global i32 0, align 4
@BTA_ID_AG = common dso_local global i32 0, align 4
@SCO_STATE_ON = common dso_local global i32 0, align 4
@BTA_HFP_SCO_OUT_PKT_SIZE = common dso_local global i32 0, align 4
@BTA_AG_CI_SCO_DATA_EVT = common dso_local global i32 0, align 4
@BTA_AG_AUDIO_OPEN_EVT = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@BTA_AG_SCO_MSBC_SETTINGS_T2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_ag_sco_conn_open(%struct.TYPE_6__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @UNUSED(i32* %5)
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %8 = load i32, i32* @BTA_AG_SCO_CONN_OPEN_E, align 4
  %9 = call i32 @bta_ag_sco_event(%struct.TYPE_6__* %7, i32 %8)
  %10 = load i32, i32* @BTA_ID_AG, align 4
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 5
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @bta_sys_sco_open(i32 %10, i32 %13, i32 %16)
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %19 = call i32 @bta_ag_scb_to_idx(%struct.TYPE_6__* %18)
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @SCO_STATE_ON, align 4
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 4
  %26 = load i32, i32* %25, align 4
  %27 = call i32 (i32, i32, i32, ...) @bta_ag_sco_audio_state(i32 %19, i32 %22, i32 %23, i32 %26)
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %29 = call i32 @bta_ag_scb_to_idx(%struct.TYPE_6__* %28)
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @BTA_HFP_SCO_OUT_PKT_SIZE, align 4
  %34 = load i32, i32* @BTA_AG_CI_SCO_DATA_EVT, align 4
  %35 = call i32 @bta_ag_sco_co_open(i32 %29, i32 %32, i32 %33, i32 %34)
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %37 = load i32, i32* @BTA_AG_AUDIO_OPEN_EVT, align 4
  %38 = call i32 @bta_ag_cback_sco(%struct.TYPE_6__* %36, i32 %37)
  %39 = load i32, i32* @FALSE, align 4
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 1
  store i32 %39, i32* %41, align 4
  %42 = load i32, i32* @BTA_AG_SCO_MSBC_SETTINGS_T2, align 4
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 0
  store i32 %42, i32* %44, align 4
  ret void
}

declare dso_local i32 @UNUSED(i32*) #1

declare dso_local i32 @bta_ag_sco_event(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @bta_sys_sco_open(i32, i32, i32) #1

declare dso_local i32 @bta_ag_sco_audio_state(i32, i32, i32, ...) #1

declare dso_local i32 @bta_ag_scb_to_idx(%struct.TYPE_6__*) #1

declare dso_local i32 @bta_ag_sco_co_open(i32, i32, i32, i32) #1

declare dso_local i32 @bta_ag_cback_sco(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
